--- a/package.json
+++ b/package.json
@@ -6,13 +6,24 @@
     "@types/jest": "24.0.16",
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
+    "@types/react-datepicker": "^2.8.1",
     "@types/react-dom": "16.8.5",
+    "@types/react-modal": "^3.8.2",
+    "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
+    "@types/styled-components": "^4.1.18",
     "react": "^16.8.6",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.9.1",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "typescript": "^3.4.5"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^4.3.2",
+    "typescript": "^3.4.5",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
