--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.18",
+    "@types/uuid": "^3.4.5",
     "react": "^16.8.6",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
