--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-modal": "^3.8.2",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-transition-group": "^4.2.2",
     "@types/styled-components": "^4.1.18",
     "@types/uuid": "^3.4.5",
     "react": "^16.8.6",
@@ -25,6 +26,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^4.3.2",
