Move @import in GlobalStyles , because it wasn't working in production
change homepage prop in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rafalstefanowicz.github.io/tasks/",
+  "homepage": ".",
   "name": "tasks",
   "version": "0.1.0",
   "private": true,
